force-app/main/default/objects/Service_Compliance_History__c/Service_Compliance_History__c.object-meta.xml
<CustomObject>
    <description>Holds a history of all Regulatory Decisions for a Service/Provider</description>
    <label>Service Compliance History</label>
    <nameField>
        <displayFormat>SCRH-{000000}</displayFormat>
        <label>SCR History ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Compliance Histories</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>