force-app/main/default/objects/Service_Compliance_History__c/fields/Algorithm_Version__c.field-meta.xml
<CustomField>
    <fullName>Algorithm_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Algorithm Version</label>
    <referenceTo>ExpressionSetVersion</referenceTo>
    <relationshipLabel>Service Compliance Histories</relationshipLabel>
    <relationshipName>Service_Compliance_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>