force-app/main/default/objects/Service_Compliance_History__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>Provider__r.Name +&quot;_&quot; +  Service__r.Name +&quot;_&quot; + TEXT(TODAY())</formula>
    <label>Name</label>
    <type>Text</type>
</CustomField>