force-app/main/default/objects/Service_Compliance_History__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Compliance Historys</relationshipLabel>
    <relationshipName>Service_Compliance_History</relationshipName>
    <type>Lookup</type>
</CustomField>