force-app/main/default/objects/Service_Compliance_History__c/fields/Rating_Calc_Date__c.field-meta.xml
<CustomField>
    <fullName>Rating_Calc_Date__c</fullName>
    <description>Date time rating calculation occurred</description>
    <label>SCR Rating Date</label>
    <type>DateTime</type>
</CustomField>