force-app/main/default/objects/Service_Compliance_History__c/fields/Rating_Exemption_Granted__c.field-meta.xml
<CustomField>
    <fullName>Rating_Exemption_Granted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Rating Exemption Granted</description>
    <label>Rating Exemption Granted</label>
    <type>Checkbox</type>
</CustomField>