force-app/main/default/objects/Service_Compliance_History__c/fields/Rating_Type__c.field-meta.xml
<CustomField>
    <fullName>Rating_Type__c</fullName>
    <label>Rating Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rating_Type</valueSetName>
    </valueSet>
</CustomField>