force-app/main/default/objects/Service_Compliance_History__c/fields/Regulatory_Decision__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Decision__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>connection to regulatory Decision</description>
    <label>Regulatory Decision</label>
    <referenceTo>RegulatoryCodeViolation</referenceTo>
    <relationshipLabel>Service Compliance Histories</relationshipLabel>
    <relationshipName>Service_Compliance_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>