force-app/main/default/objects/Service_Compliance_History__c/fields/SCR_Final_Rating__c.field-meta.xml
<CustomField>
    <fullName>SCR_Final_Rating__c</fullName>
    <description>The final SCR Rating for the service at that point int time</description>
    <label>SCR Final Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Service_Compliance_Rating_Effect</valueSetName>
    </valueSet>
</CustomField>