force-app/main/default/objects/Service_Compliance_History__c/fields/SCR_Rating__c.field-meta.xml
<CustomField>
    <fullName>SCR_Rating__c</fullName>
    <label>SCR Rating</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>