force-app/main/default/objects/Service_Compliance_History__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <referenceTo>BusinessLicense</referenceTo>
    <relationshipLabel>Service Compliance Historys</relationshipLabel>
    <relationshipName>Service_Compliance_History</relationshipName>
    <type>Lookup</type>
</CustomField>