force-app/main/default/objects/Service_Compliance_History__c/fields/Service_Account__c.field-meta.xml
<CustomField>
    <fullName>Service_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Account</label>
    <referenceTo>Service_Account_Relationship__c</referenceTo>
    <relationshipLabel>Service Compliance Histories</relationshipLabel>
    <relationshipName>Service_Compliance_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>