force-app/main/default/objects/Service_Compliance_History__c/fields/Service_Compliance_Rating__c.field-meta.xml
<CustomField>
    <fullName>Service_Compliance_Rating__c</fullName>
    <description>Service Compliance number rating, out of 5</description>
    <label>Service Compliance Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>