force-app/main/default/objects/Service_Compliance_History__c/fields/Service_Compliance_Rating_Description__c.field-meta.xml
<CustomField>
    <fullName>Service_Compliance_Rating_Description__c</fullName>
    <description>Description based on overall SCR rating of Service</description>
    <label>Service Compliance Rating Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Well below average</fullName>
            </value>
            <value>
                <fullName>Below average</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Well above average</fullName>
            </value>
            <value>
                <fullName>Above average</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>