force-app/main/default/objects/Service_Compliance_History__c/fields/SRQI_Rating_Exemption_Granted__c.field-meta.xml
<CustomField>
    <fullName>SRQI_Rating_Exemption_Granted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Rating Exemption Granted is an indicator of whether a rating has been exempted</description>
    <label>Rating Exemption Granted</label>
    <type>Checkbox</type>
</CustomField>