force-app/main/default/objects/Service_Compliance_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Service__c</columns>
    <columns>Name__c</columns>
    <columns>Availability_Status__c</columns>
    <columns>Service_Compliance_Rating__c</columns>
    <columns>Regulatory_Decision__c</columns>
    <columns>Status__c</columns>
    <columns>Rating_Exemption_Granted__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>